--- a/index.html
+++ b/index.html
@@ -57,6 +57,30 @@
         <li> Item Two</li>
         <li> Item Three</li>
     </ol>
+    <hr />
+    <h2>@nav</h2>
+<nav>
+    <div> iAmBrand</div>
+    <ul>
+        <li>
+            <a href="/">Home</a>
+        </li>
+        <li>
+            <a href="/">Product</a>
+        </li>
+        <li>
+            <a href="/">About</a>
+        </li>
+    </ul>
+</nav>
+<hr />
+<h2>header</h2>
+<header>
+    <img src="images/hero.svg"/>
+
+    <h1>Heading inside hero</h1>
+</header>
+
 
 </body>
 </html>
