Update: Typography and fonts

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <h2> This is the second biggest heading.</h2>
     <p> This is a small paragraph and free flowing which will be wrapped at 
         end.</p>
+        <p> This is a bold text <strong>Bold</strong></strong></p>
     <small> This is even smaller text</small>
 
     <hr >
