--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <h2>@container</h2>
 
     <h3 > fluid container</h3>
-    <div> This is a fluid container and it will go till the page</div>
+    <div class="container-fluid"> This is a fluid container and it will go till the page</div>
 <h3 > fluid container</h3>
-<div> This is a centered container and it will go till the specified width. </div>
+<div class="container-centered"> This is a centered container and it will go till the specified width. </div>
 <hr >
 <h2>@links</h2>
-<a href="/" >Primary Link</a>
-<a href="/" >Secondary Link</a>
+<a class="link link-primary"  href="/" >Primary Link</a>
+<a class="link link-secondary" href="/" >Secondary Link</a>
 
     <hr >
     <h2>@list</h2>
